--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,7 +25,7 @@ jobs:
       - uses: ikalnytskyi/action-setup-postgres@v7
         id: postgres
 
-        env:
+      - env:
           PGSERVICE: ${{ steps.postgres.outputs.service-name }}
         run: |
           createuser starter
