--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,7 +26,7 @@ jobs:
         id: postgres
 
       - name: DB Initialize
-      - env:
+        env:
           PGSERVICE: ${{ steps.postgres.outputs.service-name }}
         run: |
           createuser starter
